--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
+/* :root {
+  line-height: 1.5;
 
+  color: black;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+} */
