--- a/src/pages/CSS/Gallery.css
+++ b/src/pages/CSS/Gallery.css
@@ -34,6 +34,48 @@ iframe {
   border-radius: 5px;
 }
 
-p.title :hover {
+.title :hover {
   cursor: pointer;
+  font-weight: bold;
+}
+
+.gallery-head {
+  font-size: 200px;
+  margin-bottom: 0;
+  margin-left: 10%;
+  user-select: none;
+  padding-top: 50px;
+}
+
+.see-more {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+.see-more:hover {
+  cursor: pointer;
+}
+
+.see-more-text {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  width: 120px;
+  position: relative;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+.see-more-text::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: -3px;
+  width: 0;
+  height: 2px; /* Set the height of the underline */
+  background-color: #000000; /* Set the underline color to match your background */
+  transition: width 0.3s ease;
+}
+
+.see-more-text:hover::before {
+  width: 100%;
 }
