--- a/src/pages/CSS/About.css
+++ b/src/pages/CSS/About.css
@@ -1,1 +1,55 @@
+.information-head {
+  font-size: 100px;
+  margin-bottom: 0;
+  margin-left: 10%;
+  user-select: none;
+  padding-top: 5%;
+  padding-bottom: 0;
+  letter-spacing: 40px;
+  margin-left: 10%;
+  transition: transform 0.5s;
+}
 
+.text-M:hover {
+  color: pink;
+}
+
+/* .information-detail {
+  border: 2px solid #000;
+} */
+
+.container-about-me {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding-left: 10%;
+  position: absolute;
+}
+.space {
+  height: 40vh;
+}
+
+.about-me {
+  top: -70px;
+  position: relative;
+  font-size: 40px;
+  font-weight: bold;
+  margin-top: 0;
+  padding-top: 0;
+  user-select: none;
+}
+.dot {
+  font-size: 90px;
+}
+
+.details-me {
+  position: relative;
+  top: -150px;
+  letter-spacing: 1px;
+}
+
+.details-asmr {
+  position: relative;
+  top: -160px;
+  letter-spacing: 1px;
+}
