--- a/src/pages/CSS/Gallery.css
+++ b/src/pages/CSS/Gallery.css
@@ -44,7 +44,13 @@ iframe {
   margin-bottom: 0;
   margin-left: 10%;
   user-select: none;
-  padding-top: 50px;
+  padding-top: 80px;
+  opacity: 0;
+  transition: opacity 2s ease;
+}
+
+.gallery-head.fade-in {
+  opacity: 1;
 }
 
 .see-more {
