--- a/src/pages/CSS/Contacts.css
+++ b/src/pages/CSS/Contacts.css
@@ -1,1 +1,118 @@
+.contacts {
+  font-size: 500%;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+  letter-spacing: 2px;
+}
+.contacts-section {
+  justify-content: center;
+  /* border: #c32121 4px solid; */
+  display: flex;
+}
 
+.contacts-container {
+  border: 2px solid black;
+  border-radius: 20px;
+  margin: 0 10% 10%;
+  margin-top: 10%;
+  height: 460px;
+  width: 60%;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Style for text input */
+
+input[type="text"],
+input[type="email"],
+input[type="message"] {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid #ccc; /* Add this line for underline */
+  outline: none; /* Remove the default focus border */
+  font-family: inherit;
+}
+
+/* Style for textarea */
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid #ccc; /* Add this line for underline */
+  outline: none; /* Remove the default focus border */
+  font-family: inherit;
+}
+
+label {
+  margin-left: 10px;
+}
+
+/* Style for the submit button */
+button {
+  background-color: rgb(255, 219, 225);
+  color: black;
+  font-weight: 600;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: inherit;
+  margin-bottom: 10%;
+}
+
+button:hover {
+  background-color: rgb(255, 201, 210);
+}
+
+/* Optional: Style for labels */
+label {
+  font-weight: bold;
+}
+
+.contacts-box {
+  margin-left: 10%;
+  /* border: 2px solid purple; */
+}
+
+.info {
+  font-size: 30px;
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  letter-spacing: 2px;
+}
+
+.info-box {
+  background-color: rgb(255, 219, 225);
+  align-items: center;
+  /* border: 2px solid #c32121; */
+  border-radius: 20px;
+  padding: 4%;
+  margin: 10%;
+}
+
+.icon-socials img {
+  width: 50px;
+  padding: 15px;
+  transition: transform 0.5s;
+}
+
+.icon-socials img:hover {
+  transform: scale(1.2);
+  filter: drop-shadow(5px 5px 5px rgb(255, 129, 150));
+}
