--- a/src/App.css
+++ b/src/App.css
@@ -135,3 +135,9 @@ li {
     user-select: none;
   }
 }
+
+@media only screen and (max-width: 415px) {
+  .navbar {
+    visibility: hidden;
+  }
+}
