--- a/src/pages/CSS/About.css
+++ b/src/pages/CSS/About.css
@@ -114,3 +114,72 @@
 .text-what-is {
   letter-spacing: 1px;
 }
+
+@media only screen and (max-width: 415px) {
+  .information-head {
+    font-size: 100px;
+    margin-bottom: 0;
+    margin-left: 10%;
+    user-select: none;
+    padding-top: 0%;
+    margin-top: 0;
+    padding-bottom: 0;
+    letter-spacing: 40px;
+    margin-left: 10%;
+    transition: transform 0.5s;
+  }
+
+  .about-me {
+    top: -150px;
+    position: relative;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 0;
+    padding-top: 0;
+    user-select: none;
+    /* border: #e33a3a solid 1px; */
+  }
+
+  .dot {
+    font-size: 50px;
+  }
+  .details-me {
+    position: relative;
+    top: -150px;
+    letter-spacing: 1px;
+    width: 100%;
+  }
+
+  .details-asmr {
+    position: relative;
+    top: -160px;
+    letter-spacing: 1px;
+    width: 100vh;
+    width: 100%;
+  }
+  .container-about-me {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding-left: 10%;
+    top: 42%;
+    position: absolute;
+    /* border: solid 3px rgb(18, 216, 200); */
+    width: 100%;
+  }
+  .asmr-box {
+    /* border: 2px solid #8f7fb0; */
+    position: absolute;
+    background-color: rgb(255, 216, 223);
+    border-radius: 30px;
+    margin: 0%;
+    padding: 15px;
+    width: 80%;
+    top: 70%;
+    left: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    letter-spacing: 1px;
+  }
+}
