--- a/src/pages/CSS/Gallery.css
+++ b/src/pages/CSS/Gallery.css
@@ -94,3 +94,30 @@ iframe {
     font-size: 150px;
   }
 }
+
+@media only screen and (max-width: 415px) {
+  .gallery-head {
+    font-size: 100px;
+    margin-top: 90px;
+    margin-left: 10%;
+  }
+  .container-videos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .gallery-section {
+    width: 120%;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .gallery-section {
+    width: 150%;
+  }
+  .gallery-head {
+    font-size: 100px;
+    margin-top: 90px;
+    margin-left: 17%;
+  }
+}
